# JOCLCommon

./: CMakeLists.txt  CMake_c_flag_overrides.cmake  CMake_cxx_flag_overrides.cmake  LICENSE  README.md
src/main/include/CL/: cl.h  cl_ext.h  cl_platform.h
src/main/native/: CLJNIUtils.cpp  CLJNIUtils.hpp  ConversionsCL.cpp  ConversionsCL.hpp  JNIUtils.cpp  JNIUtils.hpp  JOCLCommon.hpp  Logger.cpp  Logger.hpp  PointerUtils.cpp  PointerUtils.hpp
